Adding some examples of new features of Java 25.